--- a/job.css
+++ b/job.css
@@ -1,3 +1,11 @@
+.background-color{
+    background-color: rgb(255, 255, 255);
+}
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
 /* Slideshow container */
 .slideshow-container {
     max-width: 800px;
@@ -5,6 +13,42 @@
     margin: auto;
     text-align: center;
 }
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #23f310;
+    font-size: 12px;
+    padding: 8px 20px;
+    position: absolute;
+    top: 0;
+    margin-left: 20px;
+  }
+
+.prev, .next {
+    cursor: pointer;
+    position: center;
+    top: 50%;
+    width: auto;
+    padding: 20px;
+    margin-top: 0px;
+    color: rgb(129, 131, 133);
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
       
 /* The dots/bullets/indicators */
 .dot {
@@ -12,22 +56,22 @@
     height: 12px;
     width: 12px;
     margin: 0 2px;
-    background-color: #afaeae;
+    background-color: #fab9b9;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
 }
       
 .active, .dot:hover {
-    background-color: #616161;
+    background-color: #b18e8e;
 }
       
 /* Fading animation */
 .fade {
     -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
+    -webkit-animation-duration: 0s;
     animation-name: fade;
-    animation-duration: 1.5s;
+    animation-duration: 0s;
 }
       
 @-webkit-keyframes fade {
@@ -38,4 +82,22 @@
 @keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
+}
+
+.text1{
+  font-family: 'Dela Gothic One', cursive;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 40px;
+}
+
+.text2{
+  font-family: 'Nothing You Could Do', cursive;
+  text-align: center;
+  font-size: 16px;
+}
+
+.text3{
+  font-family: 'Nothing You Could Do', cursive;
+  text-align: center;
 }
